# PhiK

./: .gitattributes  .gitignore  .mbuild.sh  .readthedocs.yml  CHANGES.rst  CMakeLists.txt  MANIFEST.in  NOTICE  README.rst  example.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: inplace_build.yml  test_matrix.yml  tests.yml  valgrind.yml  wheels.yml
docs/: Makefile  autogenerate.sh
docs/source/: code.rst  conf.py  developing.rst  index.rst  introduction.rst  phik.decorators.rst  phik.rst  phik_index.rst  publication.rst  tutorials.rst
phik/: __init__.py  betainc.py  binning.py  bivariate.py  data_quality.py  definitions.py  entry_points.py  outliers.py  phik.py  report.py  resources.py  significance.py  simulation.py  statistics.py  utils.py  version.py
phik/decorators/: pandas.py
phik/notebooks/: phik_tutorial_advanced.ipynb  phik_tutorial_advanced_vscode.py  phik_tutorial_basic.ipynb  phik_tutorial_spark.ipynb
phik/simcore/: CMakeLists.txt  __init__.py  bindings.cpp
python/phik/: __init__.py  betainc.py  binning.py  bivariate.py  config.py  data_quality.py  definitions.py  outliers.py  phik.py  report.py  resources.py  significance.py  simulation.py  statistics.py  utils.py  version.py
python/phik/decorators/: __init__.py  pandas.py
python/phik/notebooks/: phik_tutorial_advanced.ipynb  phik_tutorial_basic.ipynb  phik_tutorial_spark.ipynb
python/phik/simcore/: CMakeLists.txt  __init__.py  simulation.hpp
tests/: setup.py  test_phik.py
tests/integration/: test_phik_tutorial_advanced.py  test_phik_tutorial_basic.py
tests/phik_python/: bases.py  test_phik.py
tests/phik_python/integration/: test_notebooks.py
